--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "netlify dev",
     "dev:vite": "vite",
     "clean": "rimraf dist",
-    "build": "node scripts/standalone-build.js",
+    "build": "node scripts/emergency-build.js",
     "build:netlify-simple": "node scripts/netlify-build.js",
     "build:netlify-production": "node scripts/netlify-production-build.js",
     "build:netlify-safe": "node scripts/netlify-safe-build.js",
